welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: value update is not a member of String
    if(litMessage()="A"){
       ^BDRBuggle:7: error: value update is not a member of String
    if(litMessage()="B"){
       ^BDRBuggle:11: error: value update is not a member of String
    if(litMessage()="C"){
       ^