welcome.lessons.welcome.bdr.BDR.scala.code
var fin=false
while (!fin){
  if (estSurMessage()){
    if(litMessage()="A"){
      avance()
    }
    if(litMessage()="B"){
      avance()
      avance()
    }
    if(litMessage()="C"){
      avance()
      avance()
      avance()
    }
  }
  else {
    fin=true
  }
}	